# logical

./: .gitignore  .gitmodules  AST.cpp  AST.hpp  CMakeLists.txt  Clause.cpp  Clause.hpp  Database.cpp  Database.hpp  Entity.hpp  README.md  StringTable.cpp  logical.l  logical.y  main.cpp  my.db  tests.cpp
.devcontainer/: Dockerfile  devcontainer.json
docs/: binaryformat.md  contributing.md  differences.md  implementation.md  manual.md  synopsis.md  worklist.md
include/: HashIndex.hpp  HashTable.hpp  HashUtils.hpp  Index.hpp  Logical.hpp  Program.hpp  Table.hpp  TableWriter.hpp  Utils.hpp
modules/mysql/: CMakeLists.txt  mysql.cpp
modules/parsers/: CMakeLists.txt  JavaScriptLexer.g4  JavaScriptLexerBase.cpp  JavaScriptLexerBase.h  JavaScriptParser.g4  JavaScriptParserBase.cpp  Language.hpp  Parser.hpp  ParserModule.cpp  ParserModule.hpp  Predicates.hpp  parsers.cpp
modules/stdlib/: CMakeLists.txt  functions.hpp  stdlib.cpp  strings.cpp
samples/: example1.dl  printHTML.dl  synposis.dl  tutorial.dl  tutorial.logic
src/: AST.cpp  AST.hpp  Allocator.cpp  Allocator.hpp  Analysis.cpp  Analysis.hpp  Binary.cpp  Binary.hpp  CMakeLists.txt  CodeGen.hpp  Colours.hpp  Columns.hpp  Compiler.cpp  Compiler.hpp  CompoundName.cpp  CompoundName.hpp  Database.cpp  Database.hpp  DatabaseImpl.hpp  Entity.hpp  Evaluation.cpp  Evaluation.hpp  EvaluationImpl.hpp  Externs.cpp  Fwd.hpp  Helpers.hpp  OptimizerImpl.hpp  Relation.cpp  Relation.hpp  RelationImpl.hpp  SourceLocation.hpp  StringTable.cpp  StringTable.hpp  Table.cpp  Table.hpp  TableImpl.hpp  TableWriter.cpp  VirtualMachine.cpp  VirtualMachine.hpp  logical.l  (+4 more)
stdlib/: CMakeLists.txt  functions.hpp  math.cpp  stdlib.cpp  strings.cpp
stdlib/tests/: file1.dl  file2.dl  messages.dl  pi.dl  regex1.dl  strings1.dl
tests/: all1.dl  arithmetic1.dl  arithmetic2.dl  arithmetic4.dl  binary1.dl  binary2.dl  binding-errors.dl  count1.dl  database2.dl  eq1.dl  exit.logic  exit2.logic  import.logic  isnot1.dl  new2.dl  new3.dl  new4.dl  new5.dl  not2.dl  or1.dl  primes1.dl  print.logic  print2.dl  projection1.dl  projection2.dl  projection3.dl  projection4.dl  query1.dl  query2.dl  range1.dl  range3.dl  reaches1.dl  recursion2.dl  recursion3.dl  recursion4.dl  recursion5.dl  recursion6.dl  recursion7.dl  rule1.logic  rule2.logic  (+11 more)
tests/externs/: CMakeLists.txt  count.dl  externs.cpp  listargs.dl  load.dl  setdata.dl  table.dl
tests/mysql/: connection1.dl  execute1.dl  loadmodule.dl  mysql.dl  sync1.dl
tests/parsers/: Test.java  java.dl  java1.dl  java2.dl  java3.dl  javascript1.dl  javascript2.dl  loadmodule.dl  parse1.dl  parse2.dl  parsejdk.dl  parsejdk.dl2  report-summary.dl
tests/performance/: closure1.dl  closure2.dl  closure3.dl  new3.dl  strings1.dl  strings2.dl
tests/programs/: arithmetic1.dl  arithmetic3.dl  arithmetic4.dl  binary1.dl  binary2.dl  binding-errors.dl  comparators1.dl  count1.dl  database1.dl  datalog1.dl  datalog2.dl  datalog3.dl  datalog4.dl  datalog5.dl  datalog6.dl  datalog7.dl  datalog8.dl  datalog9.dl  eq1.dl  experimental.dl  import.logic  modules.logic  modules1.dl  modules2.dl  modules3.dl  modules4.dl  new1.dl  new2.dl  new3.dl  new4.dl  new5.dl  not1.dl  not2.dl  or1.dl  or2.dl  primes1.dl  projection1.dl  projection2.dl  projection3.dl  projection4.dl  (+28 more)
tests/stdlib/: csv.dl  environment.dl  error1.dl  file1.dl  file2.dl  messages.dl  pi2.dl  print1.dl  random.dl  regex1.dl  strings1.dl  strings2.dl  strings3.dl  strings4.dl  strings5.dl  types.dl
tests/unittests/: tables.cpp  tests.cpp
